%% sybilSBML Version History

\name{NEWS}
\title{sybilSBML News}
\encoding{UTF-8}

\newcommand{\CRANpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}

% ---------------------------------------------------------------------------- %
\section{Changes in version 2.0.9 2015-07-03}{
  \itemize{
    \item Changed Maintainer.
  }
}

% ---------------------------------------------------------------------------- %
\section{Changes in version 2.0.8 2014-05-21}{
  \itemize{
    \item function \code{openSBMLfile} does a \code{normalizePath} on its
          argument \code{fname}
  }
}


% ---------------------------------------------------------------------------- %
\section{Changes in version 2.0.7 2013-11-27}{
  \itemize{
    \item added file \code{CITATION}
  }
}


% ---------------------------------------------------------------------------- %
\section{Changes in version 2.0.6 2013-10-26}{
  \itemize{
    \item a minor bugfix in file \file{configure.ac}
  }
}


% ---------------------------------------------------------------------------- %
\section{Changes in version 2.0.5 2013-09-08}{
  \itemize{
    \item function \code{readSBMLmod} returns an error if the input file does
          not contain a -- or contains an empty -- \code{listOfReactions},
          \code{listOfSpecies} or \code{listOfCompartments} section.
  }
}


% ---------------------------------------------------------------------------- %
\section{Changes in version 2.0.4 2013-08-01}{
  \itemize{
    \item function \code{getSBMLCompartList()} returns also the compartment
          names, if given
    \item fixed a bug in file \file{configure.ac} which occurs when
          \code{pkg-config} is not used
  }
}


% ---------------------------------------------------------------------------- %
\section{Changes in version 2.0.3 2013-05-30}{
  \itemize{
    \item some improvements in \file{Makevars.win} suggested by Brian D. Ripley
          and Uwe Ligges
  }
}

