@@ -1,22 +1,22 @@
 Package: sybilSBML
 Type: Package
-Title: SBML Integration in Package Sybil
-Version: 2.0.9
-Date: 2015-07-03
+Title: SBML Integration in Package 'Sybil'
+Version: 2.0.11
+Date: 2016-06-06
 Authors@R: c(person(c("C.", "Jonathan"), "Fritzemeier", role = c("cre", "ctb"), email = "clausjonathan.fritzemeier@uni-duesseldorf.de"),
-			 person("Gabriel", "Gelius-Dietrich", role = c("aut")),
+			 person("Gabriel", "Gelius-Dietrich", role = c("aut", "ctb")),
              person("Deya", "Alzoubi", role = "ctb"))
-Maintainer: Gabriel Gelius-Dietrich <geliudie@uni-duesseldorf.de>
-Depends: R (>= 2.14.2), Matrix, sybil (>= 1.2.4)
+Maintainer: C. Jonathan Fritzemeier <clausjonathan.fritzemeier@uni-duesseldorf.de>
+Depends: R (>= 2.14.2), Matrix, sybil (>= 2.0.0)
 Imports: methods
-Description: SBML (Systems Biology Markup Language) integration in sybil. Many constraint based metabolic models are published in SBML format (*.xml). Herewith is the ability to read and check SBML files in sybil provided.
+Description: 'SBML' (Systems Biology Markup Language) integration in 'sybil'. Many constraint based metabolic models are published in 'SBML' format ('*.xml'). Herewith is the ability to read and check 'SBML' files in 'sybil' provided.
 License: GPL-3 | file LICENSE
 LazyLoad: yes
 Collate: generics.R sbmlPtrClass.R sbmlErrorClass.R sybilSBML.R
         uglyHack.R readSBMLmod.R zzz.R
-Packaged: 2014-05-21 07:11:55 UTC; gabriel
+Packaged: 2015-06-06 07:11:55 UTC; jonathan
 Author: C. Jonathan Fritzemeier [cre, ctb],
-  Gabriel Gelius-Dietrich [aut],
+  Gabriel Gelius-Dietrich [aut, ctb],
   Deya Alzoubi [ctb]
 NeedsCompilation: yes
 Repository: CRAN
