@@ -7,6 +7,14 @@
 \newcommand{\CRANpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
 
 % ---------------------------------------------------------------------------- %
+\section{Changes in version 2.0.11 2015-07-03}{
+  \itemize{
+    \item \code{gprRules}-Slot in \code{modelorg} has changed. Thus 
+    \code{readSBMLmod} had to be updated.
+  }
+}
+
+% ---------------------------------------------------------------------------- %
 \section{Changes in version 2.0.9 2015-07-03}{
   \itemize{
     \item Changed Maintainer.
